Reformat jinja template

--- a/python/run-flink-code.py.jinja2
+++ b/python/run-flink-code.py.jinja2
@@ -23,16 +23,43 @@ def execute_table_definitions(definitions: List[str], params: Dict[str, Any]) ->
 
 
 parser = argparse.ArgumentParser()
-parser.add_argument("--table-definition-path", nargs='+', required=True, help="Path to flink table DDL. Can be path to a file or s3")
-parser.add_argument("--target-table", "-tt", required=True, help="Target table where to write results of the query.")
+parser.add_argument(
+    "--table-definition-path", nargs="+", required=True, help="Path to flink table DDL. Can be path to a file or s3"
+)
+parser.add_argument("--target-table", "-tt", required=False, help="Target table where to write results of the query.")
 parser.add_argument("--metadata-query-name", "-qname", required=False, help="Human readable SQL query name.")
 parser.add_argument("--metadata-query-description", "-qdesc", required=False, help="SQL query description.")
 parser.add_argument("--metadata-query-id", "-qid", required=False, help="Unique SQL query id.")
-parser.add_argument("--metadata-query-version", "-qv", type=int, required=False, help="SQL query version, monotonously increasing, starts from 1.")
-parser.add_argument("--metadata-query-create-timestamp", "-qtime", required=False, help="When has the SQL query been deployed.")
-parser.add_argument("--template-params", required=False, nargs="+", help="Extra parameters that will be used when resolving template variables. Each should have form 'key=value'",)
-parser.add_argument("--timestamp-field-name", required=False, type=str, default="__create_timestamp", help="The name of the field containing the creation of the event.")
-parser.add_argument("--include-query-metadata", required=False, action="store_true", default=True, help="Indicates whether '__query_*' metadata fields should be added to the result.")
+parser.add_argument(
+    "--metadata-query-version",
+    "-qv",
+    type=int,
+    required=False,
+    help="SQL query version, monotonously increasing, starts from 1.",
+)
+parser.add_argument(
+    "--metadata-query-create-timestamp", "-qtime", required=False, help="When has the SQL query been deployed."
+)
+parser.add_argument(
+    "--template-params",
+    required=False,
+    nargs="+",
+    help="Extra parameters that will be used when resolving template variables. Each should have form 'key=value'.",
+)
+parser.add_argument(
+    "--timestamp-field-name",
+    required=False,
+    type=str,
+    default="__create_timestamp",
+    help="The name of the field containing the creation of the event.",
+)
+parser.add_argument(
+    "--include-query-metadata",
+    required=False,
+    action="store_true",
+    default=True,
+    help="Indicates whether '__query_*' metadata fields should be added to the result.",
+)
 
 args = parser.parse_args(sys.argv[1:])
 stream_env = StreamExecutionEnvironment.get_execution_environment()
